[package]
name = "dxhook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "nightly-x86_64-pc-windows-msvc"
[lib]
crate-type = ["cdylib"]

[dependencies]
detour = "0.8.1"
imgui = "0.4"
imgui-dx9-renderer = "0.4"
winapi = { version = "0.3.9", features = ["minwindef", "windef", "winnt", "winuser", "consoleapi", "libloaderapi", "processthreadsapi", "d3d9", "d3d9types"] }